tests/phase2/bad_type_mismatch.stderr
tests/phase2/bad_type_mismatch.sl:44:48: error: type mismatch
