tests/phase2/bad_type_mismatch.sl
package demo

fun a(x i32) i32 {
    return true
}
